# receipts-rs

./: .gitignore  Cargo.toml  README.md  main.tf
.github/workflows/: rust.yml
crates/process-receipt-image/: Cargo.toml  README.md
crates/process-receipt-image/src/: main.rs  state.rs
crates/process-receipt-text/: Cargo.toml  README.md
crates/process-receipt-text/src/: main.rs
crates/process-receipt-text/src/aws/: mod.rs
crates/utils/: Cargo.toml  README.md
crates/utils/src/: file.rs  lib.rs  receipt.rs
crates/utils/src/aws/: bedrock.rs  dynamo.rs  mod.rs  s3.rs  textract.rs
terraform/: cognito.tf  dynamodb.tf  gateway.tf  lambda.tf  providers.tf  s3.tf  variables.tf
