[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
authors = ["PotatoMaster101"]
categories = ["web-programming"]
description = "Digital receipts"
edition = "2024"
keywords = ["receipt"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/PotatoMaster101/receipts-rs"
version = "0.1.0"

[workspace.dependencies]
aws-config = { features = ["behavior-version-latest"], version = "1.8" }
aws-sdk-bedrockruntime = { version = "1.130" }
aws-sdk-dynamodb = { version = "1.110" }
aws-sdk-s3 = { version = "1.131" }
aws-sdk-textract = { version = "1.98" }
lambda_http = { version = "1.1" }
lambda_runtime = { version = "1.1" }
serde = { features = ["derive"], version = "1.0" }
serde_dynamo = { features = ["aws-sdk-dynamodb+1"], version = "4.3" }
tokio = { features = ["full"], version = "1.52" }
utils = { path = "crates/utils" }

[workspace.lints.clippy]
cargo = { level = "warn", priority = 0 }
missing_errors_doc = { level = "allow", priority = 1 }
multiple_crate_versions = { level = "allow", priority = 1 }
nursery = { level = "warn", priority = 0 }
pedantic = { level = "warn", priority = 0 }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = "symbols"
