[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "process-receipt-text"
readme = "README.md"
repository.workspace = true
version.workspace = true

[dependencies]
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
lambda_runtime = { workspace = true }
tokio = { workspace = true }
utils = { workspace = true }
