[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "process-receipt-text"
readme = "README.md"
repository.workspace = true
version.workspace = true

[dependencies]
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
lambda_http = { workspace = true }
lambda_runtime = { workspace = true }
tokio = { workspace = true }
utils = { workspace = true }

[lints]
workspace = true
