[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "utils"
readme = "README.md"
repository.workspace = true
version.workspace = true

[dependencies]
aws-sdk-bedrockruntime = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-sdk-textract = { workspace = true }
serde = { workspace = true }
serde_dynamo = { workspace = true }

chrono = { version = "0.4" }
file-format = { version = "0.29" }
hex = { version = "0.4" }
sha2 = { version = "0.11" }
thiserror = { version = "2.0" }

[dev-dependencies]
tokio = { workspace = true }

aws-sdk-dynamodb = { features = ["test-util"], version = "1.110" }
aws-sdk-s3 = { features = ["test-util"], version = "1.131" }
aws-smithy-mocks = { version = "0.2" }
